--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^9.8.6",
+    "framer-motion": "^2.4.3-beta.2",
     "next": "9.5.1",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-use": "^15.3.3",
+    "styled-components": "^5.1.1",
     "tailwindcss": "^1.6.2"
   }
 }
