--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
     "react-use": "^15.3.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1",
     "tailwindcss": "^1.6.2"
   }
