--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-source-maps": "^0.0.3",
     "autoprefixer": "^9.8.6",
     "framer-motion": "^2.4.3-beta.2",
     "next": "9.5.1",
+    "next-compose-plugins": "^2.2.0",
+    "next-transpile-modules": "^4.1.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-id-swiper": "^4.0.0",
     "react-redux": "^7.2.1",
     "react-use": "^15.3.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1",
+    "swiper": "^6.1.2",
     "tailwindcss": "^1.6.2"
   }
 }
