--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.20.0",
     "framer-motion": "^2.4.3-beta.2",
     "next": "9.5.1",
     "next-compose-plugins": "^2.2.0",
