--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "16.13.1",
     "react-id-swiper": "^4.0.0",
     "react-redux": "^7.2.1",
+    "react-rewards": "^1.1.1",
     "react-use": "^15.3.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
